@@ -20,6 +20,7 @@ MEDUIUM PRIORITY
 - baseline alignment of reaction equations (how did I do this in advanced-acid-base-solutions?)
 
 LOW PRIORITY
+- if pH paper color animation is not desired, delete associated code in PHPaper
 - control panel layout issues, left justification
 - use SolutionFactory in TestSolutionControl
 - chem symbol api, handle baseline/bold/italic/super/sub/color, use Piccolo for layout control
