@@ -1,3 +1,4 @@
+8/8/10 disable color animation for pH paper (see PHPaper.ANIMATE_COLOR)
 # 0.00.16 (42834) Aug 4, 2010
 8/4/10 demonstrate first pass at pH paper
 8/4/10 placeholder for conductivity tester visual representation
